--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "@types/node": "^20.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
+    "pdf-parse": "^1.1.1",
+    "dotenv": "^16.4.5"
   }
 }
